add location change css syntax

--- a/weather.html
+++ b/weather.html
@@ -13,11 +13,11 @@
     <title>City Weather</title>
 </head>
 
-<body np-app="Weather">
-    <div class="container" ng-controller="MainCtrl">
+<body>
+    <div class="container">
         <div class="row">
             <header class="col-xs-12 text-center">
-                <h1>H<i class="wi wi-hail"></i>llo Alex</h1>
+                <h1>H<i class="wi wi-hail"></i>w's the Weather Today?</h1>
             </header>
             <div class="row">
                 <div class="col-xs-12 text-center">
@@ -31,14 +31,13 @@
                 <div class="col-xs-12 text-center" id="weatherWrapper">
                     <div class="location details">
                     </div>
-                    <div id="conditions" class="details">
-                    </div>
                 </div>
             </div>
-            <footer>
-                <p class="text-center">Inspired By <a href="https://github.com/liyujiel" target="_blank">Alex Li</a></p>
-            </footer>
         </div>
+        <footer>
+            <p class="text-center">Inspired By <a href="https://github.com/liyujiel" target="_blank">Alex Li</a></p>
+        </footer>
+    </div>
 </body>
 
 </html>
